--- a/scss/components/component-card-post.scss
+++ b/scss/components/component-card-post.scss
@@ -25,6 +25,7 @@
 .card-post__image-wrapper {
     position: relative;
     margin-bottom: 8px;
+    transition: all .3 ease;
 }
 
 .card-post__media {
@@ -36,6 +37,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        z-index: 1;
     }
 }
 
@@ -142,5 +144,34 @@
     margin-left: 8px;
     svg {
         vertical-align: bottom;
+    }
+}
+
+.card-post____image {
+    transition: all .3s ease;
+}
+
+.card-post:hover {
+    .card-post__image-wrapper {
+        box-shadow: 0 0 13px rgba(0,0,0,0.2);
+    }
+    .card-post____image {
+        transform: scale(1.1);
+    }
+}
+
+.article-card--true {
+    margin-bottom: -2rem;
+    .card-post__info {
+        padding: 20px;
+        margin: 20px;
+        margin-top: 30px;
+        margin-top: -10%;
+        z-index: 1;
+        position: relative;
+        background: var(--background-color-featured-posts);
+    }
+    .card-post__time {
+      margin-bottom: 10%;
     }
 }
