--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -682,6 +682,10 @@ form[action="/cart/add"].cart-drawer.js-ajax-cart-form-in-progress [type="submit
 	overflow: hidden;
 	padding-top: 50px;
 	margin-top: -50px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-left: -15px;
+	margin-right: -15px;
 	.swiper-button-prev, .swiper-button-next {
 		color: var(--color-link-text);
 		width: 28px;
