--- a/scss/sections/section-featured-posts.scss
+++ b/scss/sections/section-featured-posts.scss
@@ -64,7 +64,7 @@ swiper-section .featured-posts__list {
     padding: 0;
     list-style: none;
     margin: 0;
-    align-items: baseline;
+    //align-items: baseline;
     width: auto;
     min-width: 100%;
 }
