add login and register page

--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -382,6 +382,7 @@ fieldset {
 .form-status {
     margin: 0;
     font-size: 1.6rem;
+    text-transform: none;
 }
 
 .form__message .icon, .customer .form__message svg {
