--- a/scss/components/component-footer.scss
+++ b/scss/components/component-footer.scss
@@ -71,7 +71,9 @@
 }
 
 .footer__block-links {
-    margin: -1rem 0 0 0;
+    @media screen and (min-width: 768px) {
+        margin: -1rem 0 0 0;
+    }
     padding: 0;
     list-style: none;
 }
